syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "google/api/annotations.proto";

option go_package = "./pb";

service CoinGate {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/api/v1/create_users"
            body: "*"
        };
    };
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {   
        option (google.api.http) = {
        post: "/api/v1/login_users"
        body: "*"
    };};
}